// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryListItem should render and match snapshot 1`] = `
<div
  className="row"
>
  <Connect(Link)
    href="/augsburg/de/willkommen"
  >
    <img
      className="categoryThumbnail"
      src="https://cms.integreat-ap…03/Beratung-150x150.png"
    />
    <Highlighter
      caseSensitive={false}
      className="categoryCaption"
      matchClass="highlight"
      matchElement="strong"
      matchStyle={Object {}}
      search=""
    >
      Willkommen
    </Highlighter>
  </Connect(Link)>
  <div
    className="subRow"
    key="5234"
  >
    <Connect(Link)
      href="/augsburg/de/test"
    >
      <img
        className="categoryThumbnail"
        src="https://cms.integreat-ap…03/Beratung-150x150.png"
      />
      <div
        className="categoryCaption"
      >
        Child
      </div>
    </Connect(Link)>
  </div>
</div>
`;

exports[`CategoryListItem should replace empty thumbnail 1`] = `
<div
  className="row"
>
  <Connect(Link)
    href=""
  >
    <img
      className="categoryThumbnail"
      src="test-file-stub"
    />
    <Highlighter
      caseSensitive={false}
      className="categoryCaption"
      matchClass="highlight"
      matchElement="strong"
      matchStyle={Object {}}
      search=""
    >
      GotNoThumb :O
    </Highlighter>
  </Connect(Link)>
  <div
    className="subRow"
    key="42"
  >
    <Connect(Link)
      href=""
    >
      <div
        className="categoryThumbnail"
      />
      <div
        className="categoryCaption"
      >
        GotNoThumb :O
      </div>
    </Connect(Link)>
  </div>
</div>
`;
